Fix spacing on the user profile table

--- a/css/partials/_user-profile-view.sass
+++ b/css/partials/_user-profile-view.sass
@@ -22,7 +22,7 @@
     margin-bottom : 1.313em
 
   th
-    padding-right: 0.31em 1.313em 0.31em 0.31em
+    padding      : 0.31em 1.313em 0.31em 0.31em
     height       : 2em
     vertical-align: middle
 
